[package]
name = "arm-attr"
version = "0.2.0"
edition = "2021"
authors = ["Aetias <aetias@outlook.com>"]
license = "MIT"
description = "Reads ARM build attributes of an ELF file"
repository = "https://github.com/AetiasHax/arm-attr"
readme = "../README.md"
categories = ["no-std"]

[dependencies]
thiserror = { version = "2.0", default-features = false }
